--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,16 @@
-app = "personal-website-v74dac"
-primary_region = 'cdg'
+app = "personal-website"
+primary_region = "sjc"
 
 [build]
+  builder = "heroku/buildpacks:20"
+
+[env]
+  PORT = "8080"
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
-
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  processes = ["app"]
